[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[project]
name = "pdpy"
version ="0.0.7"
authors = [
  { name="Fede Camara Halac", email="fch226@nyu.edu" },
]
description = "A Pure Data PYthon Utility"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Multimedia",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fdch/pdpy"
"Bug Tracker" = "https://github.com/fdch/pdpy/issues"