
[project]
name = "pdpylib"
version ="0.1.1"
authors = [
  { name="Fede Camara Halac", email="fdch@nyu.edu" },
]
description = "A Scripting Language for Pure Data written in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Multimedia",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pdpy-org/pdpy"
"Bug Tracker" = "https://github.com/pdpy-org/pdpy/issues"