[metadata]
name = pdpy
version = 0.1
author = Fede Camara Halac
author_email = fch226@nyu.edu
description = A Pure Data PYthon Utility
long_description = file: README.md
long_description_content_type = text/markdown
keywords= puredata, scripting, metalanguage
url = https://github.com/fdch/pdpy
project_urls =
    Bug Tracker = https://github.com/fdch/pdpy/issues
classifiers =
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

